--- a/views/Login.hbs
+++ b/views/Login.hbs
@@ -98,7 +98,7 @@ h2.headertekst {
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="contrasena" required>
         
-    <button type="submit">Login</button>
+    <button type="submit" class="btn btn-primary">Login</button>
     <label for="uname">¿No está registrado?</label>
     <button onclick="document.getElementById('id01').style.display='block'" >Registrarse</button>
     <button onclick="location.href='/form_interesado'">Entrar como interesado</button>
@@ -133,12 +133,11 @@ h2.headertekst {
       <option value="coordinador">Coordinador</option>
       </select>
         
-      <button type="submit">Login</button>
+      <button type="submit">Registrarse</button>
       <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancelar</button>
     
   </form>
 </div>
-
 
 
 
