--- a/views/aspirante.hbs
+++ b/views/aspirante.hbs
@@ -4,12 +4,13 @@
 </head>
 
 <body>
-
-<h2>Entrega Semana 2</h2>
+{{{alerta tipo mensaje}}}
+{{{nombre usuario}}}
 <form action="inscribir_aspirante" method="post">
         {{{cursos_inscripcion inscribir}}}
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
+<button onclick="location.href='/'" class="btn btn-primary">Salir</button>
 
 
 <script src="js/jquery.min.js"></script>
