--- a/views/coordinador.hbs
+++ b/views/coordinador.hbs
@@ -6,8 +6,11 @@
 </head>
 
 <body>
-
-<h2>Entrega Semana 2</h2>
+{{{alerta tipo mensaje}}}
+<div>
+{{{nombre usuario}}}
+<button onclick="location.href='/'" class="btn btn-primary">Salir</button>
+</div>
  <div class="col-4">
           <div class="list-group" id="list-tab" role="tablist">
             <a class="list-group-item list-group-item-action active" id="Crear_curso" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Crear cursos</a>
@@ -54,6 +57,7 @@
           </div>
           </div>
         </div>
+
 
 
 <script src="js/jquery.min.js"></script>
