--- a/views/interesado.hbs
+++ b/views/interesado.hbs
@@ -12,6 +12,7 @@
 {{{listar Listado}}}
 
 
+<button onclick="location.href='/'" class="btn btn-primary">Salir</button>
 <script src="js/jquery.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
